# change_point_detection

./: README.md  dvc.yaml  init_setup.sh  params.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
data/raw/: sales.csv
data_given/: sales.csv.dvc
reports/: breakpoints.json  metrics.json
src/: detection.py  get_data.py  metrics.py  show.py
tests/: test_config.py
