[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]   #development options
testing =
    pytest>=7.1.3   #this helps to run unit test and integration test
    mypy>=0.971   # used to check wheather there is any typing error or not 
    flake8>=5.0.4   #used for check any mistakes we have done in program (that will be highlighted)
    tox>=3.25.1  #used for which helps to create diffrent working environments and test it locally
    black>=22.8.0 #used for formatting your application

[options.package_data]  #where is my file
ChangePointDetection = py.typed
  
[flake8] #standards are followed are not
max-line-length = 160
exclude = __init__.py
